--- a/src/components/Card/styles/style.css
+++ b/src/components/Card/styles/style.css
@@ -15,12 +15,12 @@
     z-index: 9999;
 }
 
-.header_card { 
+.header_card {
     padding-bottom: 0.5rem;
     height: 137px;
     position: absolute;
     width: 100%;
-    
+
     background: rgb(11, 112, 226);
     background: -moz-linear-gradient(90deg, rgba(11, 112, 226, 1) 0%, rgba(141, 201, 54, 1) 100%);
     background: -webkit-linear-gradient(90deg, rgba(11, 112, 226, 1) 0%, rgba(141, 201, 54, 1) 100%);
@@ -138,7 +138,7 @@
 
 .line_option {
     width: 100%;
-    height: 0;
+    height: 1px;
     background-color: #DDDDDD;
 }
 
@@ -149,12 +149,13 @@
 .info_row_option>div {
     display: flex;
     width: 100%;
+
     align-items: center;
 }
 
 .info_row_option> div >p {
     width: 100%;
-    margin-left: 0.5rem;
+    margin: 5px;
     position: relative;
     font-size: 1rem;
     color: #54595F;
@@ -173,7 +174,7 @@
 }
 
 .row_option_lexa>div>.textPrimary {
-    line-height: 28px;   
+    line-height: 28px;
     height: 35px;
     color: white;
     font-family: "Roboto", Sans-serif, serif;
@@ -327,7 +328,7 @@
         text-align: center;
         color: #626467;
     }
-    
+
     .textThree_bottom_card{
         width: 90%;
         color: #54595F;
@@ -374,7 +375,7 @@
         align-items: center;
     }
     .row_option_lexa>div>.textPrimary {
-               text-align: center;
+        text-align: center;
     }
 
     .row_option_lexa>div>.textSecondary {
@@ -385,4 +386,3 @@
         bottom: 20px;
     }
 }
-
