--- a/src/components/Avaliation/styles/style.css
+++ b/src/components/Avaliation/styles/style.css
@@ -48,6 +48,7 @@
     display: flex;
     flex-direction: row;
     margin: 0 15px;
+    height: 320px;
     position: relative;
     overflow: hidden;
     z-index: 10;
@@ -186,5 +187,19 @@
     }
     .description {
         padding: 0 20px 20px 20px;
+    }
+}
+
+@media screen and (max-width:720px){
+
+    .inner-card {
+        display: flex;
+        flex-direction: row;
+        margin: 0 15px;
+        height: 380px;
+        position: relative;
+        overflow: hidden;
+        z-index: 10;
+        transition: transform 0.2s ease-in;
     }
 }
