--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ body {
   src: url("./components/Card/fonts/Poppins/Poppins-Bold.ttf");
 }
 
+
+@font-face {
+  font-family: "Poppins-Medium";
+  src: url("./components/Card/fonts/Poppins/Poppins-Medium.ttf");
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -228,7 +233,7 @@ code {
 }
 
 
-.container {
+.container_page {
   max-width: 3090px;
   display: flex;
   flex-direction: column;
@@ -239,6 +244,61 @@ code {
   font-family: "Poppins-Bold";
   font-size: 2.3rem;
   line-height: 43px;
+}
+
+.container_payment{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.image_payment_option_check{
+  transition: all .2s;
+  width: 120px;
+  cursor: pointer;
+  border-radius: 4px;
+  border: 2px solid #0B57E3;
+  margin-right: 0.9rem;
+  object-fit: cover;
+  height: 80px;
+}
+.image_payment_option_check{
+  cursor: pointer;
+
+  width: 120px;
+  border-radius: 4px;
+  margin-right: 0.9rem;
+  object-fit: cover;
+  height: 80px;
+}
+.box_payment{
+   display: flex;
+   margin-top: 2rem;
+   justify-content: center;
+   flex-direction: column;
+   align-items: center;
+}
+
+.box_option_payment{
+  display: flex;
+
+  width: 100%;
+  justify-content: last baseline;
+}
+
+.box_payment > button{
+  width: 350px;
+  cursor: pointer;
+  min-height: 40px;
+  border-radius: 5px;
+  color: white;
+  margin-top: 2rem;
+  margin-bottom: 1.9rem;
+  border: none;
+  font-family: "Poppins-Medium";
+  font-size: 1rem;
+  background-color: #3f3f3f;
 }
 
 
