commit add new feature: payment with mercado livre

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,12 @@ body {
   font-family: "Poppins-Medium";
   src: url("./components/Card/fonts/Poppins/Poppins-Medium.ttf");
 }
+
+
+@font-face {
+  font-family: "Poppins-Regular";
+  src: url("./components/Card/fonts/Poppins/Poppins-Regular.ttf");
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -29,6 +35,76 @@ code {
   object-fit: cover;
 }
 
+.container_sucess_payment{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text_secondary_sucess_payment{
+  font-size: 1rem;
+  font-size: 1.1rem;
+}
+
+.text_primary_sucess_payment{
+  font-family: "Poppins-Medium";
+  color: #0B57E3;
+  font-size: 1.3rem;
+}
+.container_sucess_payment > p {
+  font-family: "Poppins-Medium";
+
+}
+.container_inputs_sucess_payment{
+  margin-top: 0.9rem;
+}
+
+.container_inputs_sucess_payment > p {
+  font-family: "Poppins-Medium";
+  margin-bottom: 2.4rem;
+  color: #0B57E3;
+
+}
+
+.container_inputs_sucess_payment > inpu{
+  width: 620px;
+}
+
+.container_sucess_payment > img {
+  width: 490px;
+  height: 490px;
+}
+
+.row_input_assas{
+  display: flex;
+}
+
+.row_input_assas > div {
+  width: 320px;
+  margin-top: -2.9rem;
+  margin-right: 1.9rem;
+  display: flex;
+  align-items: center;
+  margin-left: -6rem;
+}
+.row_input_assas > div  {
+  color: #0e0e0e;
+  font-size: 0.9rem;
+  font-family: "Poppins-Regular";
+}
+
+.row_input_assas > div > p {
+  cursor: pointer;
+
+  margin-left: 0.9rem;
+}
+
+.row_input_assas > div > img{
+  cursor: pointer;
+
+  width: 85px;
+  height: 85px;
+}
 
 
 .clean_bottom {
