--- a/src/components/InputPaymentSucess/style/style.css
+++ b/src/components/InputPaymentSucess/style/style.css
@@ -27,13 +27,13 @@
     margin-right: 1.9rem;
 }
 
-.container_input_payment{
+.container_input_payment_sucess{
     display: flex;
     flex-direction: column;
 }
 
-.container_input_payment > input{
-    width: 320px;
+.container_input_payment_sucess > input{
+    width: 520px;
     margin-right: 1.9rem;
     border: none;
     padding-left: 0.2rem;
@@ -43,7 +43,7 @@
     border-bottom: 1.4px solid #afafaf;
 }
 
-.container_input_payment > label{
+.container_input_payment_sucess > label{
     transition: all 0.2s;
     font-size: 0.9rem;
     color: #383838;
@@ -53,7 +53,7 @@
     top:-60px;
 }
 
-.container_input_payment > 
+.container_input_payment_sucess > 
 input:focus ~ label,
 input:valid ~ label
 {   
